fix logo on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,9 @@ body {
 .todo i {
   z-index: 2;
 }
+
+@media screen and (max-width: 600px) {
+  .brand-logo {
+    font-size: 20px !important;
+  }
+}
